--- a/webdata/views/index/index.phtml
+++ b/webdata/views/index/index.phtml
@@ -7,12 +7,19 @@
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.min.js"></script>
 <link rel="stylesheet" href="/static/codemirror/lib/codemirror.css">
+<style>
+html {
+    height: 100%;
+}
+</style>
 </head>
 <body style="height: 100%">
 <div class="container" style="height: 100%">
     <div style="height: 100%; width: 50%; float: left" class="panel panel-default">
         <div class="panel-heading">編輯區</div>
-        <div class="panel-body">
+        <div class="panel-body" style="height: 100%">
+            <h3 id="filename"></h3>
+            <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true" id="save-file-button"></span>
             <textarea id="code" style="width: 100%; height: 100%"></textarea>
         </div>
     </div>
@@ -60,14 +67,16 @@ require.config({
   }]
 });
 
-require([
-    "codemirror", "codemirror/mode/htmlmixed/htmlmixed", "codemirror/mode/php/php"
-], function(CodeMirror) {
-    CodeMirror.fromTextArea(document.getElementById("code"), {
-        lineNumbers: true,
-        mode: "php"
-  });
-});
+var openfile = function(path){
+    $('#filename').text(path).data('path', path);
+    $.get('/api/getfile?base=' + encodeURIComponent(path), function(ret){
+        if (ret.error) {
+            alert(ret.message);
+            return;
+        }
+        codemirror.setValue(ret.body);
+    });
+};
 
 var chdir = function(path){
     console.log(path);
@@ -117,6 +126,22 @@ $('#file-area').on('click', '.dir-link', function(e){
     e.preventDefault();
     chdir($(this).data('path'));
 }),
+$('#file-area').on('click', '.file-link', function(e){
+    e.preventDefault();
+    openfile($(this).data('path'));
+});
+
+$('#save-file-button').click(function(e){
+    e.preventDefault();
+    var file_path = $('#filename').data('path');
+    $.post('/api/savefile?base=' + encodeURIComponent(file_path), 'body=' + encodeURIComponent(codemirror.getValue()), function(ret){
+        if (ret.error) {
+            alert(ret.message);
+            return;
+        }
+        openfile(file_path);
+    }, 'json');
+});
 $('#add-folder').submit(function(e){
     e.preventDefault();
     var base_folder = $('#dir-location').data('dir');
@@ -131,7 +156,19 @@ $('#add-folder').submit(function(e){
         $('#new-folder-name').val('');
     }, 'json');
 });
+
+var codemirror;
+require([
+    "codemirror", "codemirror/mode/htmlmixed/htmlmixed", "codemirror/mode/php/php"
+], function(CodeMirror) {
+    codemirror = CodeMirror.fromTextArea(document.getElementById("code"), {
+        lineNumbers: true,
+        mode: "php"
+  });
 chdir('/');
+openfile('/README');
+});
+
 </script>
 </body>
 </html>
