--- a/webdata/views/index/index.phtml
+++ b/webdata/views/index/index.phtml
@@ -13,13 +13,13 @@ html {
 }
 </style>
 </head>
-<body style="height: 100%">
-<div class="container" style="height: 100%">
+<body style="height: 100%; max-height: 100%">
+<div class="container" style="height: 100%; max-height: 100%">
     <div style="height: 100%; width: 50%; float: left" class="panel panel-default">
         <div class="panel-heading">編輯區</div>
         <div class="panel-body" style="height: 100%">
             <h3 id="filename"></h3>
-            <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true" id="save-file-button"></span>
+            <a href="#" id="save-file-button"><span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span></a>
             <textarea id="code" style="width: 100%; height: 100%"></textarea>
         </div>
     </div>
@@ -75,6 +75,8 @@ var openfile = function(path){
             return;
         }
         codemirror.setValue(ret.body);
+        $('#code').val(ret.body);
+        $('#save-file-button').hide();
     });
 };
 
@@ -164,7 +166,14 @@ require([
     codemirror = CodeMirror.fromTextArea(document.getElementById("code"), {
         lineNumbers: true,
         mode: "php"
-  });
+});
+codemirror.on('change', function(e){
+    if ($('#code').val() != codemirror.getValue()) {
+        $('#save-file-button').show();
+    } else {
+        $('#save-file-button').hide();
+    }
+});
 chdir('/');
 openfile('/README');
 });
