add scroll on file area

--- a/webdata/views/index/index.phtml
+++ b/webdata/views/index/index.phtml
@@ -51,9 +51,9 @@ body {
                 </form>
             </div>
         </div>
-        <div style="height: 50%; width: 100%" class="panel panel-default">
+        <div style="height: 50%; width: 100%; max-height: 50%" class="panel panel-default">
             <div class="panel-heading">檔案區</div>
-            <div class="panel-body" id="file-area">
+            <div class="panel-body" id="file-area" style="overflow: scroll; height: 100%">
                 <form id="add-folder">
                     資料夾： <ol class="breadcrumb" style="display: inline" id="dir-location" data-dir="/"></ol>
                     <input type="text" id="new-folder-name" placeholder="新資料夾名或檔名">
