change result style and readonly

--- a/webdata/views/index/index.phtml
+++ b/webdata/views/index/index.phtml
@@ -31,8 +31,8 @@ body {
         <div style="height: 50%; width: 100%" class="panel panel-default">
             <div class="panel-heading">結果區</div>
             <div class="panel-body">
-                <textarea id="result-stdout" class="result-text" style="width: 100%; height:200px"></textarea>
-                <textarea id="result-stderr" class="result-text" style="width: 100%; height:200px; display: none"></textarea>
+                <textarea id="result-stdout" class="result-text" readonly="readonly" style="background: black; color: white; width: 100%; height:200px"></textarea>
+                <textarea id="result-stderr" class="result-text" readonly="readonly" style="background: black; color: white; width: 100%; height:200px; display: none"></textarea>
                 <form id="command-form">
                     <ul class="nav nav-pills" style="display: inline-table">
                         <li role="presentation" class="result-switch active" data-type="stdout">
