--- a/webdata/views/index/index.phtml
+++ b/webdata/views/index/index.phtml
@@ -20,9 +20,8 @@ body {
 <body style="height: 100%; max-height: 100%">
 <div class="container" style="height: 100%; max-height: 100%">
     <div style="height: 100%; width: 50%; float: left" class="panel panel-default">
-        <div class="panel-heading">編輯區</div>
+        <div class="panel-heading">編輯區 - <span id="filename"></span></div>
         <div class="panel-body" style="height: 100%">
-            <h3 id="filename"></h3>
             <a href="#" id="save-file-button"><span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span></a><span id="file-is-changed" style="display:none">(*)</span>
             <textarea id="code" style="width: 100%; height: 100%"></textarea>
         </div>
@@ -55,10 +54,10 @@ body {
             </div>
         </div>
         <div style="height: 50%; width: 100%; max-height: 50%" class="panel panel-default">
-            <div class="panel-heading">檔案區</div>
+            <div class="panel-heading">檔案區 <ol class="breadcrumb" style="display: inline" id="dir-location" data-dir="/"></ol>
+        </div>
             <div class="panel-body" id="file-area" style="overflow: scroll; height: 100%">
                 <form id="add-folder">
-                    資料夾： <ol class="breadcrumb" style="display: inline" id="dir-location" data-dir="/"></ol>
                     <input type="text" id="new-folder-name" placeholder="新資料夾名或檔名">
                     <label><input type="radio" name="type" value="dir" checked="checked"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span></label>
                     <label><input type="radio" name="type" value="file"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></label>
