--- a/webdata/views/index/index.phtml
+++ b/webdata/views/index/index.phtml
@@ -369,6 +369,25 @@ $('#command-form').submit(function(e){
             return;
         }
 
+        if ($('#command-text').val().split(' ')[0] == 'vim') {
+            $('#command-form').prop('disabled', false);
+
+            var input = $('#command-text').val();
+            $('#command-text').val('').focus();
+            path = input.split(' ')[1];
+            if (!path.match('^/')) {
+                path = base_folder + path;
+            }
+            $.get('/api/getfile?base=' + encodeURIComponent(path), function(ret){
+                if (ret.error) {
+                    alert(ret.message);
+                    return;
+                }
+                openfile(ret.path);
+            }, 'json');
+            return;
+        }
+
         $.post('/api/runcommand?base=' + encodeURIComponent(base_folder) + '&command=' + encodeURIComponent($('#command-text').val()), '', function(ret){
             $('#command-form').prop('disabled', false);
             $('#command-button').text('SEND');
