--- a/webdata/views/index/index.phtml
+++ b/webdata/views/index/index.phtml
@@ -18,7 +18,7 @@ body {
 </style>
 </head>
 <body style="height: 100%; max-height: 100%">
-<div class="container" style="height: 100%; max-height: 100%">
+<div class="container-fluid" style="height: 100%; max-height: 100%">
     <div style="height: 100%; width: 50%; float: left" class="panel panel-default">
         <div class="panel-heading">編輯區 - <span id="filename"></span></div>
         <div class="panel-body" style="height: 100%">
